assets/style.css
* {
    box-sizing: border-box;
}

:root {
    --blue: rgb(76, 110, 230); 
    --green: rgb(187, 244, 182);
    --header-padding: 0 15px;
    --font-family: 'Poppins', sans-serif;
    --size2: 7vw;
    --size3: 8vw;
    --placeholder-img: url(https://via.placeholder.com/375x250?text=);
    --item-height: 100px;
}

body {
    margin: 0 0 10px 0;
}

a {
    text-decoration: none;
}

header {
    display: flex;
    background-color: var(--green);
    align-items: center;
    justify-content: space-between;
    font-family: var(--font-family);
    border: 3px solid var(--blue);
}

header h1 {
    padding: var(--header-padding);
    color: var(--blue);
    display: flex;
    align-items: center;
    font-size: 3vw;
}

h1 img {
    height: 60px;
    margin-left: 20px;
}

nav {
    display: flex;
    height: 50px;
    width: 600px;
    align-items: center;
    justify-content: space-around;
    padding: var(--header-padding);
    
}

nav a {
    font-size: 2vw;
    font-weight: bold;
    color: var(--blue);
}

.page {
    max-width: 90%;
    margin-left: auto;
    margin-right: auto;
}

.page-section {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.page-section h2 {
    width: 85%;
    display: flex;
    justify-content: center;
    border-bottom: 2px solid var(--blue);
    font-family: var(--font-family);
}

#about div {
    width: 75%;
}

#about p {
    line-height: 1.4;
    font-family: 'Georgia', sans-serif;
}

/*project section*/
.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.item {
    min-height: var(--item-height);
    max-height: var(--item-height);
    display: flex;
    justify-content: space-between;
    margin: 10px;
    padding: 10px;
    flex-basis: calc(45% - 1em);
    border: 3px solid var(--blue);
    color: black;
    border-radius: 8px;
}

/*first project*/
.item:first-child {
    flex-basis: 90%;
    min-height: 300px;
}

#contact div {
    width: 75%;
}

#contact address {
    display: flex;
    justify-content: space-around;
    margin: 5px 0 10px 0;
    font-family: var(--font-family);
    flex-wrap: wrap;
    align-items: center;
}

#contact address a {
    font-style: normal;
    font-size: 1.2rem;
    color: var(--blue);
    margin: 5px 10px; 
}

/*project images*/
.project-1 {
    background-image: var(--placeholder-img);
}

.placeholder-2{
    background-image: var(--placeholder-img);
}


.placeholder-3{
    background-image: var(--placeholder-img);
}


.placeholder-4{
    background-image: var(--placeholder-img);
}


.placeholder-5{
    background-image: var(--placeholder-img);
}

/*beginning responsive design*/
@media screen and (max-width: 980px) {
    header {
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }
    header h1 {
        width: 100%;
        justify-content: center;
        align-items: center;
        font-size: var(--size2);
        margin: 5px 0;
    }
    header img {
        height: var(--size2);
    }
    nav {
        background-color: var(--blue);
        width: 100%;
        height: 100%;
        justify-content: space-evenly;
        padding: 5px
    }
    nav a {
        color: var(--green);
        font-size: 3vw;
    }
}

@media screen and (max-width: 768px) {
    header h1 {
        font-size: var(--size3);
    }
    header img {
        height: var(--size3);
    }
    .item,
    .item:first-child {
        flex-basis: 100%;
    }
    .item:first-child {
        min-height: var(--item-height);
    }
}

